[tool.poetry]
name = "safetydance-django"
version = "0.0.6"
description = "A collection of safetydance_test steps for BDD testing of Django REST Framework applications."
authors = ["David Charboneau <david@adadabase.com>"]
license = "mit"

[tool.poetry.dependencies]
astor = { git="https://github.com/Quansight/astor.git", branch="issue-174" }
python = "^3.7"
djangorestframework = "^3.12.2"
safetydance = { git="https://gitlab.com/openteams/safetydance.git" }
safetydance-test = { git="https://gitlab.com/openteams/safetydance_test.git" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
